Update header styling in main.css by re-enabling fixed positioning and increasing margin-bottom for improved layout and spacing.

--- a/main.css
+++ b/main.css
@@ -40,7 +40,7 @@ body {
 
 /* HEADER STYLING */
 header {
-  /* position: fixed; */
+  position: fixed;
   height: 90px;
   width: 100%;
   display: flex;
@@ -49,7 +49,7 @@ header {
   padding-inline: 50px;
   background-color: blanchedalmond;
   border-bottom: 1px solid hsla(0, 0%, 80%, 0.5);
-  margin-bottom: 50px;
+  margin-bottom: 100px;
 }
 
 .header-container {
